Adicionado novos arquivos

--- a/home.html
+++ b/home.html
@@ -589,6 +589,9 @@
             </div>
 
         </section>
+        <div onclick="subirtela()" class="scrollbutton">
+            <p>Topo</p>
+        </div>
     </main>
     <footer>
         <section class="default dark">
@@ -622,7 +625,7 @@
                             </div>
                         </form>
                     </div>
-                   
+                    
                 </div>
                 <div class="devfer">
                     <h1>Desenvolvido por Fernando Borel</h1>
@@ -649,5 +652,6 @@
             </div>
         </section>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
